--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,7 +79,7 @@ body {
       border-color: #024e76;
       position: absolute;
       bottom: 90px;
-      right: 120px;
+      right: 115px;
       width: 490px;
   }
   .hero-form h3 {
@@ -95,7 +95,10 @@ body {
       padding: 7px 15px;
       font-size: 16px;
       color: #024e76;
-      width: : 100%;
+      width: 100%;
       margin-bottom: 15px;
+  }
+  .hero-form label {
+      margin: 0 5px;
   }
   
