--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -225,3 +225,49 @@ body {
       font-size: 17px;
       line-height: 1.3;
   }
+
+  .contact {
+    text-align: center;
+    background: #024e76;
+  }
+  .contact h2 {
+      color: #fce138;
+  }
+  .contact-info iframe {
+      width: 400px;
+      height: 400px;
+  }
+   
+  .contact-info div  {
+    width: 410px;
+    display: inline-block;
+    vertical-align: top;
+    text-align: left;
+    margin: 30px 0 0 60px;
+    color: white;
+  }
+
+  .contact h3 {
+    color: #fce138;
+    font-size: 32px;
+  }
+  
+  .contact p, .contact-info address {
+    margin: 20px 0;
+    line-height: 1.5;
+    font-size: 20px;
+    font-style: normal;
+  }
+  
+  .contact a {
+    color: #fce138;
+  }
+
+  .page-title {
+    font-size: 55px;
+    color: #fce138;
+    margin-bottom: 35px;
+    padding: 0 100px 20px 100px;
+    display: inline-block;
+    border-bottom: 3px solid;
+  }
