--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,7 +41,7 @@ body {
       list-style: none;
   }
 
-  header nav ul li a{
+  header nav ul li a {
       margin: 0 30px;
       font-weight: lighter;
       font-size: 1.55vw;
@@ -51,17 +51,18 @@ body {
       background: #fce138;
       width: 100%;
       padding: 40px 35px;
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
   }
 
   footer h2 {
-      display: inline;
       color: #024e76;
       font-size: 30px;
       margin: 0;
   }
 
   footer div {
-      float: right;
       line-height: 1.5;
       text-align: right;
   }
@@ -77,10 +78,26 @@ body {
   /* Hero style start */
   .hero {
       background-image: url("../images/hero-bg.jpg");
-      height: 600px;
       background-size: cover;
       background-position: center;
-      position: relative;
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+  }
+
+  .hero-cta {
+      width: 35%;
+      text-align: right;
+      margin: 3.5%;
+      color: #fff;
+      font-size: 18px;
+      line-height: 1.3;
+  }
+
+  .hero-cta h2 {
+      font-style: italic;
+      font-size: 55px;
+      color: #fce138;
   }
 
   .hero-form {
@@ -91,10 +108,8 @@ body {
       border-style: solid;
       border-width: 3px; 
       border-color: #024e76;
-      position: absolute;
-      bottom: 120px;
-      right: 140px;
-      width: 490px;
+      width: 40%;
+      margin: 3.5%;
   }
   .hero-form h3 {
       font-size: 25px;
@@ -124,9 +139,6 @@ body {
   }
    /* Hero style end */
 
-   .intro {
-       text-align: center;
-   }
 
   .intro p {
       line-height: 1.7;
@@ -134,44 +146,65 @@ body {
       width: 80%;
       font-size: 20px;
       margin: 0 auto;
+      text-align: center;
   } 
 
   .steps {
-    text-align: center;
     background: #fce138;
   }
 
-  .steps div {
-      margin-bottom: 80px;
+  .step {
+    margin: 50px auto;
+    padding-bottom: 50px;
+    width: 80%;
+    border-bottom: 1px solid #39a6b2;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
   }
 
-  .steps img { 
-      width: 15%;
-      margin: 10px 0;
-  }
-
-  .steps h3 {
+  .step h3 {
       color: #024e76;
       font-size: 46px;
-      margin-top: 10px;
+      flex: 1 30%;
   }
 
-  .steps p {
+  .step-info {
+      flex: 2 70%;
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+  }
+
+  .step-img {
+    flex: 1 12%;
+    margin-right: 20px;
+  }
+
+  .step-text {
+      flex: 12;
+  }
+
+  .step-text p {
       color: #39a6b2;
-      font-size: 23px;
+      font-size: 18px;
   }
 
-  .steps span {
-      font-size: 38px;
+  .step-text h4 {
+    font-size: 26px;
+    line-height: 1.5;
+    color: #024e76;
   }
 
   .section-title {
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
     border-bottom: 3px solid;
+    padding: 20px;
+    text-align: center;
+    margin: 0 auto  35px 0;
+    width: 50%;
   }
   
   .primary-border {
@@ -185,7 +218,6 @@ body {
   /* Trainer section */
 
   .trainers {
-      text-align: center;
   }
 
   .trainer {
@@ -232,7 +264,6 @@ body {
   }
 
   .contact {
-    text-align: center;
     background: #024e76;
   }
   .contact h2 {
@@ -275,4 +306,8 @@ body {
     padding: 0 100px 20px 100px;
     display: inline-block;
     border-bottom: 3px solid;
+  }
+
+  .flex-row{
+      display: flex;
   }
