--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,7 +42,7 @@ body {
   }
 
   header nav ul li a {
-      margin: 0 30px;
+      margin: 10px 15px;
       font-weight: lighter;
       font-size: 1.55vw;
   }
@@ -83,6 +83,7 @@ body {
       display: flex;
       justify-content: center;
       flex-wrap: wrap;
+      align-items: flex-start;
   }
 
   .hero-cta {
@@ -91,7 +92,7 @@ body {
       margin: 3.5%;
       color: #fff;
       font-size: 18px;
-      line-height: 1.3;
+      line-height: 1.2;
   }
 
   .hero-cta h2 {
@@ -198,7 +199,7 @@ body {
   }
 
   .section-title {
-    font-size: 55px;
+    font-size: 48px;
     color: #024e76;
     border-bottom: 3px solid;
     padding: 20px;
@@ -329,4 +330,22 @@ body {
 
   .flex-row{
       display: flex;
+  }
+
+  @media screen and (max-width: 980px) {
+      header h1  a {
+          color: tomato;
+      }
+  }
+
+  @media screen and (max-width: 768px) {
+      header h1 {
+          font-size:80px;
+      }
+  }
+
+  @media screen and (max-width: 575px) {
+      header h1 {
+          font-size: 100px;
+      }
   }
