--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,13 @@ body {
       display: flex;
       justify-content: space-between;
       flex-wrap: wrap;
+      position: -webkit-sticky;
+      position: sticky;
+      top: 0;
+      background-image: url("../images/hero-bg.jpg");
+      background-size: cover;
+      background-position: 80%;
+      background-attachment: fixed;
   }
 
   header h1 {
@@ -22,6 +29,7 @@ body {
       font-size: 36px;
       color: #fce138;
       margin: 0;
+      text-shadow: 0 0 10px rgba(0, 0, 0, 0.5)
   }
 
   header a {
@@ -41,10 +49,11 @@ body {
       list-style: none;
   }
 
-  header nav ul li a {
+  header nav ul li a:hover {
       margin: 10px 15px;
       font-weight: lighter;
       font-size: 1.55vw;
+      text-shadow: 0 0 10px rgba(0, 0, 0, 0.5)
   }
 
   footer {
@@ -79,7 +88,8 @@ body {
   .hero {
       background-image: url("../images/hero-bg.jpg");
       background-size: cover;
-      background-position: center;
+      background-position: 80%;
+      background-attachment: fixed;
       display: flex;
       justify-content: center;
       flex-wrap: wrap;
@@ -99,10 +109,11 @@ body {
       font-style: italic;
       font-size: 55px;
       color: #fce138;
+      text-shadow: 0 0 10px rgba(0, 0, 0, 0.5)
   }
 
   .hero-form {
-      background-color: #fce138;
+      background-color: rgba(252, 225, 56, 0.8);
       padding: 20px;
       width: 500px;
       color: #024e76;
@@ -111,6 +122,8 @@ body {
       border-color: #024e76;
       width: 40%;
       margin: 3.5%;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+      border-radius: 15px;
   }
   .hero-form h3 {
       font-size: 25px;
@@ -120,6 +133,7 @@ body {
       margin: 5px 0 15px 0;
   }
   .form-input {
+      background-color: rgba(255, 255, 255, 0.75);
       border: 1px solid #024e76;
       display: block;
       padding: 7px 15px;
@@ -127,16 +141,24 @@ body {
       color: #024e76;
       width: 100%;
       margin-bottom: 15px;
+      border-radius: 10px;
   }
+
+  .form-input:focus {
+      background-color: rgba(255, 255, 255, 1);
+      outline: none;
+  }
+
   .hero-form label {
       margin: 0 5px;
   }
-  .hero-form button {
+  .hero-form button:hover {
       color:#fce138;
       background-color: #024e76;
       border: none;
       padding: 10px 20px;
       font-size: 16px;
+      border-radius: 10px;
   }
    /* Hero style end */
 
@@ -158,11 +180,14 @@ body {
     margin: 50px auto;
     padding-bottom: 50px;
     width: 80%;
-    border-bottom: 1px solid #39a6b2;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
+  }
+
+  .step:nth-child(even) {
+      border-bottom: 1px solid #39a6b2;
   }
 
   .step h3 {
@@ -204,7 +229,7 @@ body {
     border-bottom: 3px solid;
     padding: 20px;
     text-align: center;
-    margin: 0 auto  35px 0;
+    margin: 0 auto 35px 0;
     width: 50%;
   }
   
@@ -295,6 +320,7 @@ body {
   }
 
   .contact-form input, .contact-form textarea {
+      background-color: rgba(255, 255, 255, 0.75);
       border: 1px solid #024e76;
       display: block;
       padding: 7px 15px;
@@ -303,9 +329,15 @@ body {
       width: 100%;
       margin-bottom: 15px;
       margin-top: 5px;
+      border-radius: 10px;
   }
 
-  .contact-form button {
+  .contact-form input:focus,  .contact-form textarea:focus {
+      background-color: rgba(255, 255, 255, 1);
+      outline: none;
+  }
+
+  .contact-form button:hover {
       width: 100%;
       border: none;
       background: #fce138;
@@ -313,6 +345,7 @@ body {
       text-align: center;
       padding: 15px 0;
       font-size: 16px;
+      border-radius: 10px;
   }
   
   .contact a {
@@ -336,6 +369,7 @@ body {
     header {
         padding-bottom: 0;
         justify-content: center;
+        position: relative;
     }
 
     header h1 {
@@ -437,5 +471,7 @@ body {
     order: 3;
   }
 }
+
     
-  }
+
+}
